RESOLVED FIXED273026
[GStreamer][WebRTC] Missing capture time in incoming video frames
https://bugs.webkit.org/show_bug.cgi?id=273026
Summary [GStreamer][WebRTC] Missing capture time in incoming video frames
Philippe Normand
Reported 2024-04-20 03:22:51 PDT
That should be the NTP timestamp, retrieved from the RTCP SR packet... iiuc.
Attachments
Philippe Normand
Comment 1 2024-05-23 11:46:02 PDT
EWS
Comment 2 2024-08-12 06:29:07 PDT
Committed 282114@main (f8d516f7b7fb): <https://commits.webkit.org/282114@main> Reviewed commits have been landed. Closing PR #29004 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-12 06:30:16 PDT
Note You need to log in before you can comment on or make changes to this bug.